docs(commit-message-instructions): add commit message guidelines for consistency

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,10 @@
     "rust-analyzer.checkOnSave": false,
     "rust-analyzer.diagnostics.disabled": [
         "unlinked-file"
+    ],
+    "github.copilot.chat.commitMessageGeneration.instructions": [
+        {
+            "file": ".github/commit-message-instructions.md"
+        }
     ]
 }
