feat(dependencies): add attrs and cattrs to project dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,7 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+    "attrs>=25.4.0",
+    "cattrs>=26.1.0",
+]
